change the time display & remove checkbox

--- a/pos/cashier/static/js/angularjs/angular_templates/payment.html
+++ b/pos/cashier/static/js/angularjs/angular_templates/payment.html
@@ -1,15 +1,15 @@
 <div class="noprint" style="display:inline-block" ng-show="record.pay_status !=2 && record.pay_status!=3">
 	<!-- <div ng-repeat="i in name"> -->
 		<!-- {{info.items[1]}} -->
-				<a class="ui red ribbon label">Card No {{record.card_no}}</a>
+				<!-- <a class="ui red ribbon label">Card Nox {{record.card_no}}</a> -->
 			    <div class="image" style="align:center">
 			      <!-- <img src="https://en.opensuse.org/images/0/0b/Icon-user.png" height="80" width="80"> -->
 			    </div>
 			    <div class="extra">
 			      <div>
-					  <input type="checkbox" ng-model="paytogether" ng-show="payalone" ng-change="billtogether(record.id)">
+					  <!-- <input type="checkbox" ng-model="paytogether" ng-show="payalone" ng-change="billtogether(record.id)"> -->
 				      <div class="orderItem form ui">
-				      	{{record.member}}
+				      	<!-- {{record.member}} -->
 					      <!-- Amount: <span style="font-size:20pt">29.90</span> -->
 					      <!-- <div class="ui star rating" data-rating="4"></div> -->
 					  </div>
